--- a/SAS/20250425 - 不等号在表联结中的妙用/不等号在表联结中的妙用.md
+++ b/SAS/20250425 - 不等号在表联结中的妙用/不等号在表联结中的妙用.md
@@ -61,13 +61,11 @@ S01011 XTV 3 1
 run;
 ```
 
-现在需要衍生新的数据集 `adex3`，包含受试者筛选号、靶区类型、累积照射次数，其中靶区类型 `GTV` 的累积照射次数需要
-在靶区类型 `CTV` 的累积照射次数上继续累加，靶区类型 `XTV` 的累积照射次数需要在靶区类型 `GTV` 的累积照射次数上继续累加。
+现在需要衍生新的数据集 `adex3`，包含受试者筛选号、靶区类型、累积照射次数，其中靶区类型 `GTV` 的累积照射次数需要在靶区类型 `CTV` 的累积照射次数上继续累加，靶区类型 `XTV` 的累积照射次数需要在靶区类型 `GTV` 的累积照射次数上继续累加。
 
 > [!IMPORTANT]
 >
-> 可以看到 `CTV`, `GTV`, `XTV` 对应的变量 `ECTVCATN` 的值依次是 `1`, `2`, `3`，恰好是按照需要逐步累加的顺序安排的，这是
-> 有意为之，便于后续使用不等号（`>=`, `<=`, ...）对数据集进行联结。
+> 可以看到靶区类型 `CTV`, `GTV`, `XTV` 对应的变量 `ECTVCATN` 的值依次是 `1`, `2`, `3`，恰好是按照需要逐步累加的顺序安排的，这是有意为之，便于后续使用不等号（`>=`, `<=`, ...）对数据集进行联结。
 
 下面开始衍生 `adex3`：
 
@@ -77,9 +75,9 @@ run;
    proc sort data = adex1 out = adex1_unique nodupkey;
        by USUBJID ECTVCAT;
    run;
+   ```
 
    这一步生成的 `adex1_unique` 将用于后续与 `adsl` 进行左联结。
-   ```
 
    `adex1_unique` 数据如下：
 
@@ -105,9 +103,8 @@ run;
 
 > [!IMPORTANT]
 >
-> 这里的关键步骤是 `adex1_unique.ectvcatn >= adex1.ectvcatn`，使用 `>=` 还是 `<=` 取决于 `靶区类型` 各类别对应数值变量的
-> 大小关系，具体如下：
+> 这里的关键步骤是 `adex1_unique.ectvcatn >= adex1.ectvcatn`，使用 `>=` 还是 `<=` 取决于 `靶区类型` 各类别对应数值变量的大小关系，具体如下：
 >
 > - 如果 `CTV`, `GTV`, `XTV` 对应的变量 `ECTVCATN` 的值依次是 `1`, `2`, `3`，则使用 `adex1_unique.ectvcatn >= adex1.ectvcatn`；
 > - 如果 `CTV`, `GTV`, `XTV` 对应的变量 `ECTVCATN` 的值依次是 `3`, `2`, `1`，则使用 `adex1_unique.ectvcatn <= adex1.ectvcatn`；
-> - 其他情况，必须首先对变量 `ECTVCATN` 重新赋值，然后按照重新赋值后的顺序使用 `>=` 或 `<=`。
+> - 其他情况，必须首先对变量 `ECTVCATN` 重新赋值，然后根据重新赋值后的顺序按照前面两条规则使用 `>=` 或 `<=`。
