--- a/SAS/20250425 - 不等号在表联结中的妙用/不等号在表联结中的妙用.md
+++ b/SAS/20250425 - 不等号在表联结中的妙用/不等号在表联结中的妙用.md
@@ -107,4 +107,4 @@ run;
 >
 > - 如果 `CTV`, `GTV`, `XTV` 对应的变量 `ECTVCATN` 的值依次是 `1`, `2`, `3`，则使用 `adex1_unique.ectvcatn >= adex1.ectvcatn`；
 > - 如果 `CTV`, `GTV`, `XTV` 对应的变量 `ECTVCATN` 的值依次是 `3`, `2`, `1`，则使用 `adex1_unique.ectvcatn <= adex1.ectvcatn`；
-> - 其他情况，必须首先对变量 `ECTVCATN` 重新赋值，然后根据重新赋值后的顺序按照前面两条规则使用 `>=` 或 `<=`。
+> - 其他情况，必须首先对变量 `ECTVCATN` 重新赋值或衍生临时变量，再根据前面两条规则使用 `>=` 或 `<=`。
