--- a/SAS/20250425 - 不良事件严重程序等级动态记录的数据处理方法/不良事件严重程序等级动态记录的数据处理方法.md
+++ b/SAS/20250425 - 不良事件严重程序等级动态记录的数据处理方法/不良事件严重程序等级动态记录的数据处理方法.md
@@ -22,7 +22,9 @@ run;
 
 ![处理前的 adae](adae-pre.png)
 
-其中的不良事件按照严重程度等级的变化分别记录，这里的关键信息是：**如果一条记录的结束日期和另一条记录的开始日期相同，且两条记录的不良事件名称一致，则说明这两条记录是同一次不良事件的两个阶段，它们之间仅存在严重程度的差异**。
+与常规的每条不良事件只记录最高等级的数据不同，这里的数据是按照严重程度等级的变化动态记录的，每次严重程度等级发生变化，就记录一条不良事件。
+
+观察数据，可以发现这里有一条关键信息：**如果一条记录的结束日期和另一条记录的开始日期相同，且两条记录的不良事件名称一致，则说明这两条记录是同一次不良事件的两个阶段，它们之间仅存在严重程度的差异**。
 
 现在需要利用以上关键信息识别这些属于同一次不良事件的记录，以便后续处理。
 
