--- a/SAS/20250425 - 不良事件严重程序等级动态记录的数据处理方法/不良事件严重程序等级动态记录的数据处理方法.md
+++ b/SAS/20250425 - 不良事件严重程序等级动态记录的数据处理方法/不良事件严重程序等级动态记录的数据处理方法.md
@@ -57,7 +57,7 @@ run;
            new_flag = "Y";
        end;
        else do;
-           /*如果当前记录的开始日期与上一条记录的结束日期不同，则是一条新的AE*/
+           /*如果当前记录的开始日期与前一条记录的结束日期不同，则是一条新的AE*/
            if aestdt ^= aeendt_lag then do;
                new_flag = "Y";
            end;
@@ -73,7 +73,7 @@ run;
 
    这里有几个关键点：
 
-   - `lag()` 函数用于获取某个变量上一次观测的值，便于比较当前记录的开始日期和上一条记录的结束日期，如果当前记录的开始日期和上一条记录的结束日期不同，就说明当前记录已经是一条新的不良事件了（即便此时的不良事件名称没有发生变化），此时将 `new_flag` 变量的值赋值为 `Y`；
+   - `lag()` 函数用于获取某个变量的前一条观测值，便于比较当前记录的开始日期和前一条记录的结束日期，如果当前记录的开始日期和前一条记录的结束日期不同，就说明当前记录已经是一条新的不良事件了（即便此时的不良事件名称没有发生变化），此时将 `new_flag` 变量的值赋值为 `Y`；
    - `aeid` 变量是不良事件的 id；
    - `aesevid` 变量是不良事件严重程度记录的 id；
 
