--- a/SAS/20250425 - 不良事件严重程序等级动态记录的数据处理方法/不良事件严重程序等级动态记录的数据处理方法.md
+++ b/SAS/20250425 - 不良事件严重程序等级动态记录的数据处理方法/不良事件严重程序等级动态记录的数据处理方法.md
@@ -57,7 +57,7 @@ run;
            new_flag = "Y";
        end;
        else do;
-           /*如果当前记录的开始日期与前一条记录的结束日期不同，则是一条新的AE*/
+           /*如果当前记录的开始日期与前一条记录的结束日期不同，则是一条新的不良事件*/
            if aestdt ^= aeendt_lag then do;
                new_flag = "Y";
            end;
@@ -98,4 +98,5 @@ run;
    ```
 
    运行结果：
+
    ![adae-unique](adae-unique.png)
