Fix(20250425-01): 更新代码和截图

--- a/SAS/20250425 - 不良事件严重程序等级动态记录的数据处理方法/不良事件严重程序等级动态记录的数据处理方法.md
+++ b/SAS/20250425 - 不良事件严重程序等级动态记录的数据处理方法/不良事件严重程序等级动态记录的数据处理方法.md
@@ -86,14 +86,16 @@ run;
    proc sql noprint;
        create table adae_unique as
            select
-               a.usubjid,
-               a.aeid,
-               a.aeterm,
-               (select max(aesevn) from adae as b where a.usubjid = b.usubjid and a.aeid = b.aeid) as aesevn,
-               (select min(aestdt) from adae as b where a.usubjid = b.usubjid and a.aeid = b.aeid) as aestdt format = yymmdd10.,
-               (select max(aeendt) from adae as b where a.usubjid = b.usubjid and a.aeid = b.aeid) as aeendt format = yymmdd10.
-           from
-               (select distinct usubjid, aeid, aeterm from adae) as a;
+               distinct
+               usubjid,
+               aeid,
+               aeterm,
+               max(aesev)  as aesev,
+               max(aesevn) as aesevn,
+               min(aestdt) as aestdt format = yymmdd10.,
+               max(aeendt) as aeendt format = yymmdd10.
+           from adae
+           group by usubjid, aeid;
    quit;
    ```
 
