--- a/SAS/20250425 - 不良事件严重程序等级动态记录的数据处理方法/不良事件严重程序等级动态记录的数据处理方法.md
+++ b/SAS/20250425 - 不良事件严重程序等级动态记录的数据处理方法/不良事件严重程序等级动态记录的数据处理方法.md
@@ -73,14 +73,14 @@ run;
 
    这里有几个关键点：
 
-   - `lag()` 函数用于获取某个变量的前一条观测值，便于比较当前记录的开始日期和前一条记录的结束日期，如果当前记录的开始日期和前一条记录的结束日期不同，就说明当前记录已经是一条新的不良事件了（即便此时的不良事件名称没有发生变化），此时将 `new_flag` 变量的值赋值为 `Y`；
+   - `lag()` 函数用于获取某个变量的前一条观测值，便于比较当前记录的开始日期和前一条记录的结束日期，如果当前记录的开始日期和前一条记录的结束日期不同，就说明当前记录已经是一条新的不良事件了（即便此时的不良事件名称没有发生变化），此时将 `new_flag` 变量赋值为 `Y`；
    - `aeid` 变量是不良事件的 id；
    - `aesevid` 变量是不良事件严重程度记录的 id；
 
    运行结果：
    ![adae-post](adae-post.png)
 
-3. 通过 `aeid` 和 `aesevid` 继续处理，比如筛选最早的开始日期、最晚的结束日期、最高的严重程度等级
+3. 通过 `aeid` 和 `aesevid` 继续处理，比如查询最早的开始日期、最晚的结束日期、最高的严重程度等级
 
    ```sas
    proc sql noprint;
