--- a/SAS/20250425 - 不良事件严重程序等级动态记录的数据处理方法/不良事件严重程序等级动态记录的数据处理方法.md
+++ b/SAS/20250425 - 不良事件严重程序等级动态记录的数据处理方法/不良事件严重程序等级动态记录的数据处理方法.md
@@ -80,7 +80,7 @@ run;
    运行结果：
    ![adae-post](adae-post.png)
 
-3. 通过 `aeid` 和 `aesevid` 继续处理，比如查询最早的开始日期、最晚的结束日期、最高的严重程度等级
+3. 通过 `aeid` 和 `aesevid` 继续处理，比如查询最高的严重程度等级、最早的开始日期、最晚的结束日期
 
    ```sas
    proc sql noprint;
